--- a/_components.buttons.scss
+++ b/_components.buttons.scss
@@ -1,11 +1,13 @@
-/*------------------------------------------------------------------*\
-    Button Component
-\*------------------------------------------------------------------*/
 
-/**
- * The button component for kraftcss
- */
- 
+/*
+|--------------------------------------------------------------------------
+| Button Component
+|--------------------------------------------------------------------------
+|
+| The button component for kraftcss
+|
+*/
+
 
 // used to calculate color difference under various conditions
 $base-difference-ratio: 5%;
